--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
         </ul>
     </header>
 
+    <div class="pyrokines">
+        <h3>Pyrokinesis</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores animi aspernatur tenetur rerum laudantium id totam quis, error,  <br>amet aliquam voluptate nemo, magnam provident rem obcaecati dolorum modi. Velit, dolore.</p> <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim aliquam beatae, exercitationem in iusto iste quam necessitatibus totam <br>laudantium alias tempore similique impedit consequatur! Quisquam, doloribus obcaecati? Nihil, illum impedit. Lorem ipsum dolorb <br> sit amet consectetur, adipisicing elit. Fuga itaque aut deleniti est, vitae ex tempora tempore eligendi ipsam alias commodi eum consequatur <br>dicta ut dolores nihil at quis adipisci.</p><br>
+        
+        <p>Студийные альбомы</p>
+        <ul>
+            <li>2015</li>
+            <li>2016</li>
+            <li>2017</li>
+            <li>2018</li>
+            <li>2019</li>
+            <li>2019</li>
+            <li>2020</li>
+            <li>2022</li>
+        </ul>
+        <div class="pyrokines__form">
+            <input type="email" placeholder="Введите свой емайл"> <br> 
+            <button>Подписаться</button>
+        </div>
+
+    </div>
     <footer>
         <p>Экзаменационная работа студентов ИСП21.2А <span>Замиралова Мамасалиева</span></p>
     </footer>
