--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
             <li>Альбомы</li>
         </ul>
     </header>
-
+    <div class="banner">
+        <img src="img/banner.PNG" alt="">
+        <div class="banner__albums">
+            <h3>Обложки альбомов и синглов</h3>
+            <div class="elems">
+                <div class="elem">
+                    <img src="img/album1.PNG" alt="">
+                    <p>Альбом "Питер, чай, не Франция"</p>
+                </div>
+                <div class="elem">
+                    <img src="img/album2.PNG" alt="">
+                    <p>Альбом "Корми демонов по <br> расписанию"</p>
+                </div>
+                <div class="elem">
+                    <img src="img/album3.PNG" alt="">
+                    <p>Сингл "Цветами радуги"</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
         <p>Экзаменационная работа студентов ИСП21.2А <span>Замиралова Мамасалиева</span></p>
     </footer>
